# a2a-cpp-sdk

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/echo_agent/: main.cpp
examples/multi_agent_demo/: CMakeLists.txt  agent_registry.hpp  chat.sh  dynamic_math_agent.cpp  dynamic_orchestrator.cpp  http_server.hpp  interacrive_client.cpp  qwen_client.hpp  redis_math_agent.cpp  redis_orchestrator.cpp  redis_task_store.cpp  redis_task_store.hpp  registry_client.hpp  registry_server.cpp  start_dynamic_system.sh
include/a2a/client/: a2a_client.hpp  card_resolver.hpp
include/a2a/core/: a2a_methods.hpp  error_code.hpp  exception.hpp  http_client.hpp  jsonrpc_request.hpp  jsonrpc_response.hpp  types.hpp
include/a2a/models/: a2a_response.hpp  agent_card.hpp  agent_message.hpp  agent_task.hpp  artifact.hpp  message_part.hpp  message_send_params.hpp  task_status.hpp
include/a2a/server/: memory_task_store.hpp  task_manager.hpp  task_store.hpp
src/client/: a2a_client.cpp  card_resolver.cpp
src/core/: http_client.cpp  jsonrpc_request.cpp  jsonrpc_response.cpp
src/models/: agent_card.cpp  agent_message.cpp  agent_task.cpp  artifact.cpp  message_part.cpp  message_send_params.cpp  task_status.cpp
src/server/: memory_task_store.cpp  task_manager.cpp
