cmake_minimum_required(VERSION 3.10)
project(multi_agent_demo)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(CURL REQUIRED)

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/third_party
)

# 链接 A2A 库
link_libraries(${CMAKE_BINARY_DIR})

# Redis TaskStore 实现（分布式部署）
add_library(redis_task_store STATIC redis_task_store.cpp)
target_link_libraries(redis_task_store 
    a2a
    hiredis
)

# Redis Orchestrator（独立进程）
add_executable(redis_orchestrator redis_orchestrator.cpp)
target_link_libraries(redis_orchestrator 
    a2a
    redis_task_store
    CURL::libcurl
    hiredis
    pthread
)

# Redis Math Agent（独立进程）
add_executable(redis_math_agent redis_math_agent.cpp)
target_link_libraries(redis_math_agent 
    a2a
    redis_task_store
    CURL::libcurl
    hiredis
    pthread
)

# 安装
install(TARGETS 
    redis_orchestrator
    redis_math_agent
    DESTINATION bin
)

# 安装头文件
install(FILES 
    qwen_client.hpp
    http_server.hpp
    redis_task_store.hpp
    DESTINATION include/multi_agent_demo
)